// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrainingForm/> should edit the training 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-28 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
            data-shrink="true"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-27 makeStyles-filledRoot-29 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value="Training label"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
                data-testid="common-elementary-form-input-helperText"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-39 makeStyles-wrapper-33 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="2"
          data-rbd-droppable-id="media-list"
          data-testid="media-list"
        >
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-346 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d7a11f43-9157-5859-80f8-4c1fbdb8d78f"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d7a11f43-9157-5859-80f8-4c1fbdb8d78f"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-350 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="dSJ24tJri4c"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-347"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-349"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-348 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Cuh wit janufizo usa hi mafob ebma giskoupe zol eg demjo cef mo erdeko cudpiv. http://ro.cf/ena
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-351 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d362d2de-61d1-5cac-90ad-f5b2d401fc6f"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d362d2de-61d1-5cac-90ad-f5b2d401fc6f"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-355 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="ceCuZuGmaGU"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-352"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-354"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-353 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Iku ez ime kuere cigom luze zakef ac aconki kekefjud voswulun kepdub optiowa. http://ti.kh/kihzaot
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-356 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="b2c86dce-e377-5e54-948e-5dced91a8baf"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="b2c86dce-e377-5e54-948e-5dced91a8baf"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-360 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="4YpYxExBmuU"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-357"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-359"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-358 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Jilre itefihpaz zij di mu tu juf ugibo etauznop ofo fuz robras roru. http://ri.kg/gocu
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-361 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="ab5ff4b3-e1e9-574d-9a41-c90a0a2b7e56"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="ab5ff4b3-e1e9-574d-9a41-c90a0a2b7e56"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-365 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="3_9DulcG_BM"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-362"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-364"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-363 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Vapig wesdaw to navuj ker ju opumesfas jugilam modkurne he tifufig em jucjana ka ow. http://bago.sa/zirgaki
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-366 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="d7fcf248-2e56-5e1f-a02d-3726c5eb5a76"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="d7fcf248-2e56-5e1f-a02d-3726c5eb5a76"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-370 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="dSJ24tJri4c"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-367"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-369"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-368 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Izun selnisu durun vemofiha uji lenu ehearu necdossu re epaduk puga nihac. http://ne.bg/wil
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-371 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="dd374ba2-aeab-5b80-a125-40e6253129f1"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="dd374ba2-aeab-5b80-a125-40e6253129f1"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-375 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="f7wy5DWM0jg"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-372"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-374"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-373 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Porrepi culvevma holeko lih fumvec wak lo icbiil zapiw ugipo duwfo du bac canpanzav ico cuvaksos era. http://be.im/hutir
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-376 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="1ac0cbdb-5022-5bca-93ff-0e22f2409306"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="1ac0cbdb-5022-5bca-93ff-0e22f2409306"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-380 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="2yPSQnnLNDc"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-377"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-379"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-378 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Evurer wozret hodhe kirlam ecwe na vene rormo widheder mig fiz medek jawep. http://otu.sn/valokos
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-381 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="39b872bf-5af5-5ff2-ba4c-cd332e1e886b"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="39b872bf-5af5-5ff2-ba4c-cd332e1e886b"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-385 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="ceCuZuGmaGU"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-382"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-384"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-383 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Bapako jek receipo bucve cel ur rejo ba beew wonuw geuk domkovfep zub vegafow sagomi po getin. http://ap.ls/la
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-386 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="3a42840d-b440-59b1-be6c-e5ddc1c14490"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="3a42840d-b440-59b1-be6c-e5ddc1c14490"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-390 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="1W94gw1An_4"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-387"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-389"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-388 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Bewo jocufci nise ci pi go mom poozgu anluduh tanfotumo dak lo ucu vamed vawapli rowehole bezhe jir. http://nukcuco.az/dowier
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-391 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="79ad4aee-226d-552d-8df8-63d025bd4cbf"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="79ad4aee-226d-552d-8df8-63d025bd4cbf"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-395 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="2f2RhOdc0Lw"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-392"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-394"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-393 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Wisufka ov osa cek zo zifgosas otlokko te liuzwad caj ona piw uwucenret becakanij nepav tud fokrigso. http://hatuzeesa.mk/jiiwju
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-396 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="72f38c44-6e95-58e9-b73a-a8bdbc2b3609"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="72f38c44-6e95-58e9-b73a-a8bdbc2b3609"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-400 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="1W94gw1An_4"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-397"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-399"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-398 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Uwi jejaluta mugitce foz kerlijfo wuwdu udoaciba jozof za uvgik izuuwu lapwoksez iwuwawo wedzafo cu ev. http://jawiz.tn/deregmu
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-401 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="34b193e9-c7c0-5491-a6bb-0a601b8f5ae9"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="34b193e9-c7c0-5491-a6bb-0a601b8f5ae9"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-405 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="4YpYxExBmuU"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-402"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-404"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-403 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ude culkusut namrohag wa uccipsa cojek telipuba oz lus hufak terijesa ogla gece so tamzel dijpoj fesbokso. http://bog.sm/weve
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-406 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="69c63ebe-28ae-5ad9-8907-93cc765d1a2f"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="69c63ebe-28ae-5ad9-8907-93cc765d1a2f"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-410 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="2f2RhOdc0Lw"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-407"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-409"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-408 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Oto fabgi buditwo baw cogsar dujpuk uva kadipbo soguewo oztauda ja abpefedi curli vo kejzi idde. http://visevatak.gb/udsu
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-411 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="0c9fbb51-635b-54e2-b9ef-42717bddd33e"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="0c9fbb51-635b-54e2-b9ef-42717bddd33e"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-415 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="0mjb0u4kIXQ"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-412"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-414"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-413 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ho ubababe pefuw do ralanra nepcogoz dalviku gidasir ilhe ter valih mug jop sop sawucva sag oz lilzulbad. http://efsen.td/repto
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-416 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="09155c8b-d73a-50d7-9601-98686294b5a7"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="09155c8b-d73a-50d7-9601-98686294b5a7"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-420 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="2yPSQnnLNDc"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-417"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-419"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-418 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Pa pogtufu duppido humhi mudzo fadjugku nuwsik mi cebma en jirlemih vaudman cunwaka baparpis sa. http://nobal.gb/ah
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-421 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="138a6cb0-dbff-5516-829a-68795f37b392"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="138a6cb0-dbff-5516-829a-68795f37b392"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-425 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="7iat95zIeUc"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-422"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-424"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-423 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Tihiji ni ow jel tajjowgi zeflilpe lonni valipte rubsu zi furuzueda juhmuca obe jegicafo ger jag cauco til. http://rurumi.gy/nucfegrep
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-426 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="ba0491cf-856c-51fd-bcdd-235ae58495d8"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="ba0491cf-856c-51fd-bcdd-235ae58495d8"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-430 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="ee58iWQ1bxQ"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-427"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-429"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-428 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Mibvava cosobin mi ajletu fevajoz uzano sukreg garazu hob hi hackomgo ehi. http://recig.im/feala
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-431 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="4b3d1ac2-de33-5059-a6f9-43d695a3c4e7"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="4b3d1ac2-de33-5059-a6f9-43d695a3c4e7"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-435 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="ee58iWQ1bxQ"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-432"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-434"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-433 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Il tiuhko raalufa fefiwo cuj bene dehdef dajki rinarug ido jo er. http://wec.ke/zadoc
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-436 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="bacce048-76ee-53f9-a2fa-f3e981efe2d3"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="bacce048-76ee-53f9-a2fa-f3e981efe2d3"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-440 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="9ZfwF1ue8fI"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-437"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-439"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-438 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Ag lipgop jopa jejissaw calu ajiukwo mugbeow nacepzak so legpakje iscasi gaod. http://we.ai/lit
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
          <div
            aria-describedby="rbd-hidden-text-2-hidden-text-4"
            class="MuiGrid-root MuiBox-root MuiBox-root-441 MuiGrid-item MuiGrid-grid-xs-12"
            data-rbd-drag-handle-context-id="2"
            data-rbd-drag-handle-draggable-id="9c657ec0-f5ac-5e68-a4c0-8a22357ad2aa"
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="9c657ec0-f5ac-5e68-a4c0-8a22357ad2aa"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <li
              class="MuiListItem-container"
            >
              <div
                class="MuiBox-root MuiBox-root-445 MuiListItem-root makeStyles-root-42 makeStyles-root-41 makeStyles-editableItem-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction makeStyles-root-49"
                data-resource="f7wy5DWM0jg"
                data-testid="media-list-item"
              >
                <div
                  class="makeStyles-image-43 makeStyles-image-442"
                />
                <div
                  class="MuiListItemText-root makeStyles-textRoot-45 makeStyles-textRoot-444"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-primary makeStyles-primaryText-44 makeStyles-primaryText-443 MuiTypography-body1 MuiTypography-displayBlock"
                    data-testid="triple-combo-item-text-primary"
                  >
                    Siczor eziza nejolvas dodbavo uwiima zot kirob wib jej ugihas um zuwhutlot jan lom ihacuwo minadlur. http://pit.cn/nu
                  </div>
                </div>
              </div>
              <div
                class="MuiListItemSecondaryAction-root makeStyles-editableItemSecondaryAction-32"
                data-testid="media-list-item-remove"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  />
                </svg>
              </div>
            </li>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root Mui-error"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-34 makeStyles-root-37 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-35 makeStyles-inner-38"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-36"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<TrainingForm/> should not submit only with label provided 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-15 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
            data-shrink="true"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-14 makeStyles-filledRoot-16 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value="Training label"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container"
          style="min-height: 0px; height: 0px; transition-duration: 300ms;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
                data-testid="common-elementary-form-input-helperText"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-26 makeStyles-wrapper-20 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="1"
          data-rbd-droppable-id="media-list"
          data-testid="media-list"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
        <div
          class="MuiCollapse-container"
          style="min-height: 0px; height: 0px; transition-duration: 300ms;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root Mui-error"
              >
                Provide at least one media to training
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-21 makeStyles-root-24 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-22 makeStyles-inner-25"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-23"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<TrainingForm/> should render 1`] = `
<div>
  <form
    action="#"
    data-testid="training-form-form"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-flex-end"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          data-testid="training-form-name"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-2 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
            data-shrink="false"
          >
            Enter training name
          </label>
          <div
            class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-1 makeStyles-filledRoot-3 MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiFilledInput-input"
              name="label"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root MuiFormHelperText-contained"
                data-testid="common-elementary-form-input-helperText"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiBox-root MuiBox-root-13 makeStyles-wrapper-7 MuiGrid-container MuiGrid-spacing-xs-1"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="media-list"
          data-testid="media-list"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Add video
        </h5>
        <div />
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <p
                class="MuiFormHelperText-root Mui-error"
              >
                <span>
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-8 makeStyles-root-11 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-9 makeStyles-inner-12"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Save training
            </span>
            <div
              class="makeStyles-loader-10"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</div>
`;
